<resources>
    <string name="app_name">BusApp</string>
    <string name="title_home">Home</string>
    <string name="title_viajes">Viajes</string>
    <string name="title_cuenta">Cuenta</string>

    <string name="title_welcome">Bienvenido</string>
    <string name="title_user">Usuario</string>
    <string name="title_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>

    <string name="text_registro">Regístrese para continuar</string>
    <string name="text_alternativa">O ingresar con</string>
    <string name="text_crearcuenta">Crear cuenta</string>

    <string name="quest_olvidocontraseña">¿Has olvidado tu contraseña?</string>
    <string name="quest_nuevousuario">¿Nuevo usuario?</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>